--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   },
   "dependencies": {
     "axios": "^1.6.5",
+    "chart.js": "^4.4.1",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
