--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "pinia": "^2.0.26",
-    "vue": "^3.2.45",
+    "vue": "^3.4.18",
     "vue-chartjs": "^5.3.0",
     "vue-router": "^4.1.6"
   },
@@ -25,10 +25,13 @@
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.35",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.4.1",
     "typescript": "~4.7.4",
     "vite": "^3.2.4",
     "vue-tsc": "^1.0.9"
