--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "pinia": "^2.0.26",
     "vue": "^3.4.18",
     "vue-chartjs": "^5.3.0",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.4",
